--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -70,6 +70,13 @@
     "cart_quick_shop_enabled": false,
     "cart_quick_shop_show_quantity_input": false,
     "favicon": "shopify:\/\/shop_images\/Favicon-8.png",
+    "countdown_date": "September 30, 2022 00:00 GMT+0100",
+    "enable_days_view": true,
+    "border_radius_countdown": 4,
+    "loop_time": 0,
+    "announcement_countdown_enable": false,
+    "background_countdown": "#ffffff",
+    "text_color_countdown": "#e84e1b",
     "gift_product_variant_id": "",
     "checkout_header_image": "",
     "checkout_logo_image": "shopify:\/\/shop_images\/BD-logo.png",
@@ -107,25 +114,19 @@
           "announcement-bar-0": {
             "type": "announcement",
             "settings": {
-              "simple_icons": "test-winner",
-              "text": "Testsieger aller Therapiedecken",
-              "link": ""
+              "htmlcontent": "<span class=\"icon-test-winner\"><\/span> Testsieger aller Therapiedecken"
             }
           },
           "51c6b612-4c82-4885-b651-5b184c8665ff": {
             "type": "announcement",
             "settings": {
-              "simple_icons": "days-test",
-              "text": "28 Tage Probeschlafen",
-              "link": ""
+              "htmlcontent": "<span class=\"icon-days-test1\"><\/span> 28 Tage Probeschlafen"
             }
           },
           "5dc5d06e-beb9-480d-b529-6a7625a504a9": {
             "type": "announcement",
             "settings": {
-              "simple_icons": "patent",
-              "text": "Patentierte & einzigartige Bezugstechnik",
-              "link": ""
+              "htmlcontent": "<span class=\"icon-patent\"><\/span> Patentierte &amp; einzigartige Bezugstechnik"
             }
           }
         },
@@ -136,6 +137,7 @@
         ],
         "settings": {
           "show_utility_bar": true,
+          "link": "",
           "show_social_icons": true,
           "show_locale_selector": false,
           "show_currency_selector": false,
